Modify file config and Snakefile

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,1 +1,1 @@
-data_cube_path : https://www2.mpia-hd.mpg.de/THINGS/Data_files/NGC_3198_NA_CUBE_THINGS.FITS
+datacube_path: https://www2.mpia-hd.mpg.de/THINGS/Data_files/NGC_3198_NA_CUBE_THINGS.FITS
